force-app/main/default/objects/Site_User__c/Site_User__c.object-meta.xml
<CustomObject>
    <label>Site User</label>
    <nameField>
        <label>Site User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>