force-app/main/default/objects/Site_User__c/fields/Last_Token__c.field-meta.xml
<CustomField>
    <fullName>Last_Token__c</fullName>
    <label>Last Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>