force-app/main/default/objects/Site_User__c/fields/Need_Reload_Client__c.field-meta.xml
<CustomField>
    <fullName>Need_Reload_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Reload Client</label>
    <type>Checkbox</type>
</CustomField>