force-app/main/default/objects/Site_User__c/fields/Token_Start__c.field-meta.xml
<CustomField>
    <fullName>Token_Start__c</fullName>
    <label>Token Start</label>
    <type>DateTime</type>
</CustomField>