force-app/main/default/objects/Site_User__c/recordTypes/Inspector.recordType-meta.xml
<RecordType>
    <fullName>Inspector</fullName>
    <active>true</active>
    <label>Inspector</label>
</RecordType>