force-app/main/default/objects/Site_User__c/recordTypes/User.recordType-meta.xml
<RecordType>
    <fullName>User</fullName>
    <active>true</active>
    <label>Client</label>
</RecordType>